--- a/src/main/resources/templates/html/index2.html
+++ b/src/main/resources/templates/html/index2.html
@@ -3,38 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <style type="text/css">
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
 
-        body{
-            padding:1%;
-            height:100vh;
-            width:100%;
-        }
-
-        #input {
-            display: inline-block;
-            width: 20%;
-            height: 80%;
-        }
-
-        #container {
-            display: inline-block;
-            width: 59%;
-            height: 100%;
-            border:solid 1px #BDBDBD;
-        }
-
-        #inputEdge {
-            display: inline-block;
-            width: 20%;
-            height: 20%;
-        }
-    </style>
     <!-- START SIGMA IMPORTS -->
       <script src="js/src/sigma.core.js"></script>
       <script src="js/src/conrad.js"></script>
@@ -92,6 +61,7 @@
     <script src="js/plugins/sigma.renderers.edgeLabels/sigma.canvas.edges.labels.def.js"></script>
     <script src="js/plugins/sigma.renderers.edgeLabels/sigma.canvas.edges.labels.curve.js"></script>
     <script src="js/plugins/sigma.renderers.edgeLabels/sigma.canvas.edges.labels.curvedArrow.js"></script>
+    <script src="js/plugins/sigma.plugins.dragNodes/sigma.plugins.dragNodes.js"></script>
     <!-- -->
     <script src="js/js/jquery.min.js"></script>
    <!--   <script src="js/sigma.min.js"></script> -->
@@ -100,16 +70,53 @@
     <script src="js/test.js"></script>
 </head>
 <body>
-<style>
-    #graph-container {
-      top: 0;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      position: absolute;
-    }
-  </style>
-<div id="graph-container">
+<style type="text/css">
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body{
+            padding:1%;
+            height:100vh;
+            width:100%;
+        }
+
+        #input {
+            display: block;
+            width: 100%;
+            height: 50%;
+        }
+
+        #text-container {
+            display: inline-block;
+            width: 30%;
+            height: 100%;
+            border:solid 1px #BDBDBD;
+            position: absolute;
+        }
+
+        #inputEdge {
+            display: block;
+            width: 100%;
+            height: 20%;
+        }
+        #graph-container {
+            display: inline-block;
+            width: 60%;
+            height: 100%;
+            border:solid 1px #BDBDBD;
+            position: absolute;
+            left: 400px;
+<!--          top: 0;-->
+<!--          bottom: 0;-->
+<!--          left: 0;-->
+<!--          right: 0;-->
+<!--          position: absolute;-->
+        }
+    </style>
+<div id="text-container">
     <textarea id="input" spellcheck="false">
     video1: cat, funny,
     video2: funny, dog
@@ -119,6 +126,10 @@
     </textarea>
     <textarea id="inputEdge"></textarea>
     <input type="button" id="subButton" value="Изменить"></p>
+    <input type="button" id="jsonButton" value="To JSON"></p>
+</div>
+<div id="graph-container">
+
 </div>
 </body>
 </html>
